--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,10 +14,7 @@
         android:theme="@style/Theme.PoetryMe"
         tools:targetApi="31">
         <activity
-            android:name=".SplashScreen"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity"
+            android:name=".LoginActivity"
             android:theme="@style/Theme.App.Starting"
             android:exported="true">
             <intent-filter>
